--- a/home.html
+++ b/home.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
 
+<head>
+
+    <meta charset="UTF-8" />
+
+ <title> 960 Tutorial </title>
+ <link href="css/960.css" rel="stylesheet"/>
+ <link href="css/reset.css" rel="stylesheet"/>
+ <link href="css/text.css" rel="stylesheet"/>
+
+</head>
+
+<body>
+
+<div class="container_12">
+
+    <div class="grid_12">
+
+        <h1> Mobile + Web Design </h1>
+
+    </div>
+
+</div>
