--- a/home.html
+++ b/home.html
@@ -20,44 +20,44 @@
 <div class="container_12">
 
 	<div class="grid_4 header">
-		<img src="imgs/logo.jpg" alt="logo">
+		<img src="images/BBQ Logo.jpg" alt="logo">
 	</div>
 	<div class="grid_3 header">
 		<br/>
 	</div>
 	<div class="grid_1 nav">
-		<a href="#"><img src="imgs/day1_sm.jpg" alt="day 1"></a>
+		<a href="#"><img src="images/MENU_S.jpg" alt="day 1"></a>
 	</div>
 	<div class="grid_1 nav">
-		<a href="#"><img src="imgs/day2_sm.jpg" alt="day 2"></a>
+		<a href="#"><img src="images/SPECIAL_S.jpg" alt="day 2"></a>
 	</div>
 		<div class="grid_1 nav">
-		<a href="#"><img src="imgs/day3_sm.jpg" alt="day 3"></a>
+		<a href="#"><img src="images/CONTACT_S.jpg" alt="day 3"></a>
 	</div>
 		<div class="grid_1 nav">
-		<a href="#"><img src="imgs/about_sm.jpg" alt="about"></a>
+		<a href="#"><img src="images/ABOUT_S.jpg" alt="about"></a>
 	</div>
 		<div class="grid_1 nav">
-		<a href="#"><img src="imgs/home_sm.jpg" alt="home"></a>
+		<a href="#"><img src="images/HOME_S.jpg" alt="home"></a>
 	</div>
 
 	<div class="grid_12">
 		<br/>
 	</div>
 	<div class="grid_12">
-		<img src="imgs/mainimg.jpg" alt="main image">
+		<img src="images/main bbq photo.jpeg" alt="main image">
 	</div>
 	<div class="grid_12">
 		<br/>
 	</div>
 	<div class="grid_4 nav2">
-		<a href="#"><img src="imgs/day1.jpg" alt="day 1"></a>
+		<a href="#"><img src="images/BEEF_sm.jpg" alt="day 1"></a>
 	</div>
 	<div class="grid_4 nav2">
-		<a href="#"><img src="imgs/day2.jpg" alt="day 2"></a>
+		<a href="#"><img src="images/PORK_sm.jpg" alt="day 2"></a>
 	</div>
 	<div class="grid_4 nav2">
-		<a href="#"><img src="imgs/day3.jpg" alt="day 3"></a>
+		<a href="#"><img src="images/CHICKEN_sm.jpg" alt="day 3"></a>
 	</div>
 	<div class="grid_12">
 		<br/>
@@ -80,16 +80,16 @@
 		<br/>
 	</div>
 	<div class="grid_3 nav3">
-		<a href="#"><img src="imgs/bottom1.jpg" alt="trudy 1"></a>
+		<a href="#"><img src="images/Bottom 1.jpg" alt="trudy 1"></a>
 	</div>
 	<div class="grid_3 nav3">
-		<a href="#"><img src="imgs/bottom2.jpg" alt="trudy 2"></a>
+		<a href="#"><img src="images/bottom 2.jpg" alt="trudy 2"></a>
 	</div>
 	<div class="grid_3 nav3">
-		<a href="#"><img src="imgs/bottom3.jpg" alt="trudy 3"></a>
+		<a href="#"><img src="images/bottom 3.jpg" alt="trudy 3"></a>
 	</div>
 	<div class="grid_3 nav3">
-		<a href="#"><img src="imgs/bottom4.jpg" alt="trudy 4"></a>
+		<a href="#"><img src="images/bottom 4.jpg" alt="trudy 4"></a>
 	</div>
 	<div class="grid_12">
 		<br/>
