--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
 <div class="container_12">
 
 	<div class="grid_4 header">
-		<img src="images/BBQ Logo.jpg" alt="logo">
+		<img src="images/imgonline-com-ua-resize-nb5H9HDDQ7.jpg" alt="logo">
 	</div>
 	<div class="grid_1 nav">
 		<a href="#"><img src="images/MENU_S.jpg" alt="day 1"></a>
