--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@
 		<br/>
 	</div>
 	<div class="grid_12">
-		<img src="images/main bbq photo.jpeg" alt="main image">
+		<img src="images/resize main photo.jpg" alt="main image">
 	</div>
 	<div class="grid_12">
 		<br/>
