--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
 <div class="container_12">
 
 	<div class="grid_7 header">
-		<img src="images/imgonline-com-ua-resize-nb5H9HDDQ7.jpg" alt="logo">
+		<img src="photo images/logo.png" alt="logo">
 	</div>
 	<div class="grid_1 nav">
 		<a href="#"><img src="images/MENU_S.jpg" alt="day 1"></a>
@@ -42,7 +42,7 @@
 		<br/>
 	</div>
 	<div class="grid_12">
-		<img src="images/resize main photo.jpg" alt="main image">
+		<img src="photo images/Main-picture.png" alt="main image">
 	</div>
 	<div class="grid_12">
 		<br/>
