--- a/home.html
+++ b/home.html
@@ -23,19 +23,19 @@
 		<img src="photo images/logo.png" alt="logo">
 	</div>
 	<div class="grid_1 nav">
-		<a href="#"><img src="images/MENU_S.jpg" alt="day 1"></a>
+		<a href="#"><img src="" alt="day 1"></a>
 	</div>
 	<div class="grid_1 nav">
-		<a href="#"><img src="images/SPECIAL_S.jpg" alt="day 2"></a>
+		<a href="#"><img src="" alt="day 2"></a>
 	</div>
 		<div class="grid_1 nav">
-		<a href="#"><img src="images/CONTACT_S.jpg" alt="day 3"></a>
+		<a href="#"><img src="" alt="day 3"></a>
 	</div>
 		<div class="grid_1 nav">
-		<a href="#"><img src="images/ABOUT_S.jpg" alt="about"></a>
+		<a href="#"><img src="" alt="about"></a>
 	</div>
 		<div class="grid_1 nav">
-		<a href="#"><img src="images/HOME_S.jpg" alt="home"></a>
+		<a href="#"><img src="" alt="home"></a>
 	</div>
 
 	<div class="grid_12">
