--- a/home.html
+++ b/home.html
@@ -22,6 +22,21 @@
 	<div class="grid_7 header">
 		<img src="photo images/logo.png" alt="logo">
 	</div>
+	<div class="grid_1 nav">
+		<a href="#"><img src="" alt="day 1"></a>
+	</div>
+	<div class="grid_1 nav">
+		<a href="#"><img src="" alt="day 2"></a>
+	</div>
+		<div class="grid_1 nav">
+		<a href="#"><img src="" alt="day 3"></a>
+	</div>
+		<div class="grid_1 nav">
+		<a href="#"><img src="" alt="about"></a>
+	</div>
+		<div class="grid_1 nav">
+		<a href="#"><img src="" alt="home"></a>
+	</div>
 
 	<div class="grid_12">
 		<br/>
