--- a/home.html
+++ b/home.html
@@ -20,16 +20,16 @@
 <div class="container_12">
 
 	<div class="grid_7 header">
-		<img src="photo images/logo.png" alt="logo">
+		<img src="images/Logo.png" alt="logo">
 	</div>
 	<div class="grid_1 nav">
-		<a href="#"><img src="" alt="day 1"></a>
+		<a href="#"><img src="images/menu.png" alt="menu"></a>
 	</div>
 	<div class="grid_1 nav">
-		<a href="#"><img src="" alt="day 2"></a>
+		<a href="#"><img src="images/special.png" alt="special"></a>
 	</div>
 		<div class="grid_1 nav">
-		<a href="#"><img src="" alt="day 3"></a>
+		<a href="#"><img src="images/contact.png" alt="contact"></a>
 	</div>
 		<div class="grid_1 nav">
 		<a href="#"><img src="" alt="about"></a>
