--- a/home.html
+++ b/home.html
@@ -32,10 +32,10 @@
 		<a href="#"><img src="images/contact.png" alt="contact"></a>
 	</div>
 		<div class="grid_1 nav">
-		<a href="#"><img src="" alt="about"></a>
+		<a href="#"><img src="images/about.png" alt="about"></a>
 	</div>
 		<div class="grid_1 nav">
-		<a href="#"><img src="" alt="home"></a>
+		<a href="#"><img src="images/home.png" alt="home"></a>
 	</div>
 
 	<div class="grid_12">
