--- a/home.html
+++ b/home.html
@@ -42,19 +42,19 @@
 		<br/>
 	</div>
 	<div class="grid_12">
-		<img src="photo images/Main-picture.png" alt="main image">
+		<img src="images/main photo.png" alt="main image">
 	</div>
 	<div class="grid_12">
 		<br/>
 	</div>
 	<div class="grid_4 nav2">
-		<a href="#"><img src="images/BEEF_sm.jpg" alt="day 1"></a>
+		<a href="#"><img src="images/beef.png" alt="beef"></a>
 	</div>
 	<div class="grid_4 nav2">
-		<a href="#"><img src="images/PORK_sm.jpg" alt="day 2"></a>
+		<a href="#"><img src="images/pork.png" alt="pork"></a>
 	</div>
 	<div class="grid_4 nav2">
-		<a href="#"><img src="images/CHICKEN_sm.jpg" alt="day 3"></a>
+		<a href="#"><img src="images/chicken.png" alt="chicken"></a>
 	</div>
 	<div class="grid_12">
 		<br/>
