--- a/home.html
+++ b/home.html
@@ -77,16 +77,16 @@
 		<br/>
 	</div>
 	<div class="grid_3 nav3">
-		<a href="#"><img src="images/Bottom 1.jpg" alt="trudy 1"></a>
+		<a href="#"><img src="images/Bottom 1.jpg" alt="meat"></a>
 	</div>
 	<div class="grid_3 nav3">
-		<a href="#"><img src="images/bottom 2.jpg" alt="trudy 2"></a>
+		<a href="#"><img src="images/bottom 2.jpg" alt="soju"></a>
 	</div>
 	<div class="grid_3 nav3">
-		<a href="#"><img src="images/bottom 3.jpg" alt="trudy 3"></a>
+		<a href="#"><img src="images/bottom 3.jpg" alt="kimchi"></a>
 	</div>
 	<div class="grid_3 nav3">
-		<a href="#"><img src="images/bottom 4.jpg" alt="trudy 4"></a>
+		<a href="#"><img src="images/bottom 4.jpg" alt="side dishes"></a>
 	</div>
 	<div class="grid_12">
 		<br/>
