--- a/home.html
+++ b/home.html
@@ -64,14 +64,13 @@
 	</div>
 
 		<div class="grid_6">
-		<p>Trudy, the corpse flower at UC Botanical Gardens, started to open around 8 p.m. Saturday July 25, 2015. The Sumatran plant, officially called Amorphophallus titanum or titan arum, is nicknamed corpse flowers because it emits a smell like a decaying object it is are blooming.</p>
-		<p>Ever since this plant was first discovered in Sumatra, Indonesia in 1878 by Italian botanist Odoardo Beccari, it has excited world-wide attention due to its massive size, fascinating appearance and habit of producing a foul odor resembling rotten flesh (to attract insects that pollinate it). During this process, the ‘flower-spadix’ actually heats up to human body temperature. UC Berkeley physicists experimented with an atomic magnetometer to measure possible biomagnetism of Trudy’s flower stalk on 2009.</p>
+		<p>Korean BBQ, known locally as gogi-gui, refers to the Korean cuisine method of grilling meat such as beef, chicken or pork on gas or charcoal grills inlaid into the dining table itself. There are many ways in which these meat dishes can be prepared, whether marinated or not.</p>
 
 	</div>
 
 		<div class="grid_6">
-<p>The plant typically requires at least 7 years before it blooms but it may take even longer. In the normal life cycle, the plant produces one single enormous branched leaf at a time that looks like a small tree reaching 10-15 feet. The leaf will go completely dormant after about 16 months while its underground tuber ‘rests’ for awhile. When it next sprouts, it will produce either another single leaf or an enormous bloom.</p>
-<p>The flower bud may take months to form but only remains open for a day or two before collapsing to restart the cycle. The characteristic ‘corpse’ odor is only produced for about a day before the collapse. If pollinated, the stalk grows into a large club-like head of orange-red seeds.</p>
+<p>One of the major things that sets Korean BBQ apart from many American BBQ traditions is the meat itself. While many American BBQ styles will include large cuts of pork, ribs, brisket, or chicken roasted or slowly smoked as the centerpiece, Korean BBQ will generally center beef, pork, or chicken skewered and grilled.</p>
+<p>Korean barbecue commonly utilizes small, tender cuts like beef tongue, beef short ribs, pork belly, and chicken. In the US, barbecue might use big cuts of meat like brisket, whole chickens, pork butts, pork ribs, and big steaks like sirloin and rib-eye.</p>
 	</div>
 	<div class="grid_12">
 		<br/>
