--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
 		<a href="#"><img src="images/about.png" alt="about"></a>
 	</div>
 		<div class="grid_1 nav">
-		<a href="#"><img src="images/home.png" alt="home"></a>
+		<a href="https://myoungjureyna.github.io/hw9/home.html"><img src="images/home.png" alt="home"></a>
 	</div>
 
 	<div class="grid_12">
