--- a/home.html
+++ b/home.html
@@ -63,15 +63,19 @@
 		<hr/>
 	</div>
 
-		<div class="grid_6">
+		<div class="grid_4">
 		<p>Korean BBQ, known locally as gogi-gui, refers to the Korean cuisine method of grilling meat such as beef, chicken or pork on gas or charcoal grills inlaid into the dining table itself. There are many ways in which these meat dishes can be prepared, whether marinated or not.</p>
 
 	</div>
 
-		<div class="grid_6">
+		<div class="grid_4">
 <p>One of the major things that sets Korean BBQ apart from many American BBQ traditions is the meat itself. While many American BBQ styles will include large cuts of pork, ribs, brisket, or chicken roasted or slowly smoked as the centerpiece, Korean BBQ will generally center beef, pork, or chicken skewered and grilled.</p>
 <p>Korean barbecue commonly utilizes small, tender cuts like beef tongue, beef short ribs, pork belly, and chicken. In the US, barbecue might use big cuts of meat like brisket, whole chickens, pork butts, pork ribs, and big steaks like sirloin and rib-eye.</p>
 	</div>
+
+	<div class="grid_4">
+		<p>Korean barbecue commonly utilizes small, tender cuts like beef tongue, beef short ribs, pork belly, and chicken. In the US, barbecue might use big cuts of meat like brisket, whole chickens, pork butts, pork ribs, and big steaks like sirloin and rib-eye.</p>
+			</div>
 	<div class="grid_12">
 		<br/>
 	</div>
